@startuml
skinparam linetype ortho
skinparam shadowing false
skinparam class {
    BackgroundColor White
    BorderColor #263238
    ArrowColor #263238
}

package "Construction Service" #FFE0B2 {
    class CostEstimateController {
        + approveEstimate(id: String, status: Boolean): ResponseEntity<WrapperApiResponse>
    }

    class CostEstimateUseCase {
        - estSrv: CostEstimateService
        - messageProducer: MessageProducer
        + approveEstimate(id: String, status: Boolean): CostEstimateResponse
    }

    interface CostEstimateService {
        + approveEstimate(id: String, status: Boolean): void
    }

    class MessageProducer {
        + send(routingKey: String, event: ApproveEvent): void
    }

    class ApproveEvent <<record>>
}

package "Notification Service" #C8E6C9 {
    class ApproveEstimateConsumer {
        + handle(event: ApproveEventMessage): void
    }
    abstract class GeneralEventConsumer<T> {
        # messagingTemplate: SimpMessagingTemplate
        # producer: MessageProducer
    }
}

package "Auth Service" #BBDEFB {
    class NotificationConsumer {
        + handle(message: NotificationCreatedEvent): void
    }
}

' Relationships
CostEstimateController o-- CostEstimateUseCase
CostEstimateUseCase o-- CostEstimateService
CostEstimateUseCase o-- MessageProducer
MessageProducer ..> ApproveEstimateConsumer : "RabbitMQ"
ApproveEstimateConsumer --|> GeneralEventConsumer
GeneralEventConsumer ..> NotificationConsumer : "RabbitMQ NotificationCreatedEvent"

@enduml
